force-app/main/default/objects/State__c/fields/of_Comp_Codes__c.field-meta.xml
<CustomField>
    <fullName>of_Comp_Codes__c</fullName>
    <label># of Comp Codes</label>
    <summaryForeignKey>State_Comp_Code__c.State__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>