force-app/main/default/objects/State__c/fields/State_Assessment_Fee__c.field-meta.xml
<CustomField>
    <fullName>State_Assessment_Fee__c</fullName>
    <label>State Assessment Fee</label>
    <summarizedField>SUTA__c.State_Assessment_and_Surcharges__c</summarizedField>
    <summaryFilterItems>
        <field>SUTA__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>SUTA__c.State__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>