force-app/main/default/objects/State__c/fields/State_Classification__c.field-meta.xml
<CustomField>
    <fullName>State_Classification__c</fullName>
    <label>State Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Master</fullName>
            </value>
            <value>
                <fullName>MCP</fullName>
            </value>
            <value>
                <fullName>Monopolistic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>