force-app/main/default/objects/State__c/fields/State_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Code__c</fullName>
    <externalId>true</externalId>
    <label>State Code</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>