force-app/main/default/objects/State__c/fields/Territorial_Rating__c.field-meta.xml
<CustomField>
    <fullName>Territorial_Rating__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Territorial Rating</label>
    <type>Checkbox</type>
</CustomField>