force-app/main/default/objects/State__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>State_Code__c</columns>
    <columns>State_Classification__c</columns>
    <columns>of_Comp_Codes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>