force-app/main/default/objects/State__c/listViews/All_States.listView-meta.xml
<ListView>
    <fullName>All_States</fullName>
    <columns>NAME</columns>
    <columns>State_Classification__c</columns>
    <columns>State_Code__c</columns>
    <columns>of_Comp_Codes__c</columns>
    <columns>State_Assessment_Fee__c</columns>
    <filterScope>Everything</filterScope>
    <label>All States</label>
</ListView>