force-app/main/default/objects/State__c/listViews/Master_States.listView-meta.xml
<ListView>
    <fullName>Master_States</fullName>
    <columns>NAME</columns>
    <columns>State_Classification__c</columns>
    <columns>State_Code__c</columns>
    <columns>of_Comp_Codes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State_Classification__c</field>
        <operation>equals</operation>
        <value>Master</value>
    </filters>
    <label>Master States</label>
</ListView>