force-app/main/default/objects/State__c/listViews/Monopolistic_States.listView-meta.xml
<ListView>
    <fullName>Monopolistic_States</fullName>
    <columns>NAME</columns>
    <columns>State_Classification__c</columns>
    <columns>State_Code__c</columns>
    <columns>of_Comp_Codes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State_Classification__c</field>
        <operation>equals</operation>
        <value>Monopolistic</value>
    </filters>
    <label>Monopolistic States</label>
</ListView>